<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingRight="23dp"
              android:paddingLeft="23dp">
    <LinearLayout
        android:id="@+id/ll_input_address_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/et_tag_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_add_tag_hint"
            android:layout_marginTop="16dp"/>
        <requestFocus/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/error_message_add_tag"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_progress_bar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone">
       <ProgressBar
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tv_progress_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/message_subscribe_tag_progress"/>
    </LinearLayout>
</RelativeLayout>